# ouster_description

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
config/: bridge.yaml
launch/: os1_world.launch.py
meshes/: os0_base.glb  os0_fin_cap.glb  os0_halo_cap.glb  os0_sensor.glb  os2_base.glb  os2_sensor.glb  osdome_sensor.glb
rviz/: example.rviz
tests/: os1_gazebo_test.py  test_mesh_loading.cpp  test_urdf_loading.py
urdf/: OS0-128.urdf.xacro  OS0-32.urdf.xacro  OS0-64.urdf.xacro  OS1-128.urdf.xacro  OS1-32.urdf.xacro  OS1-64.urdf.xacro  OS2-128.urdf.xacro  OS2-32.urdf.xacro  OS2-64.urdf.xacro  OSDome-128.urdf.xacro  OSDome-32.urdf.xacro  OSDome-64.urdf.xacro  example.urdf.xacro  os0_base.xacro  os2_base.xacro  osdome_base.xacro
worlds/: example.world
