<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouster_description</name>
  <version>1.0.7</version>
  <description>
    URDF and meshes describing Ouster laser scanners.
  </description>

  <maintainer email="marcalban@hatchbed.com">Marc Alban</maintainer>
  <license>BSD-3-Clause</license>
  <author>Wil Selby</author>
  <author>Chris Iverach-Brereton</author>
  <author>Clearpath Robotics</author>
  <author>Marc Alban</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>tf2_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>